tests/invalid/simple/List_CompileFail_3.whiley
void System::main([string] args):
     int x
     int y
     [int] a2
     a2 = [1,2,3]
     y = a2[x]
